--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,20 +32,20 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Build Docker Image
-      run: docker build -t senthilnata1/github-actions-docker-java-app:0.0.2.Release .
+    # - name: Build Docker Image
+    #   run: docker build -t senthilnata1/github-actions-docker-java-app:0.0.2.Release .
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: Login to Docker Hub
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
         
-    - name: Push Docker Image
-      run: docker push senthilnata1/github-actions-docker-java-app:0.0.2.Release
+    # - name: Push Docker Image
+    #   run: docker push senthilnata1/github-actions-docker-java-app:0.0.2.Release
       
-    - name: Deploy to Prod Environment
-      run: docker run -p 5000:5000 senthilnata1/github-actions-docker-java-app:0.0.2.Release
+    # - name: Deploy to Prod Environment
+    #   run: docker run -p 5000:5000 senthilnata1/github-actions-docker-java-app:0.0.2.Release
 
     
       
