--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    # - name: Build Docker Image
-    #   run: docker build -t senthilnata1/github-actions-docker-java-app:0.0.2.Release .
+    - name: Build Docker Image
+      run: docker build -t acepunk123/hello-world-java-demo:0.0.2.Release .
 
     # - name: Login to Docker Hub
     #   uses: docker/login-action@v1
