--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,9 +44,8 @@ jobs:
     - name: Push Docker Image
       run: docker push acepunk123/hello-world-java-demo:0.0.2.Release
       
-    # - name: Deploy to Prod Environment
-    #   run: docker run -p 5000:5000 senthilnata1/github-actions-docker-java-app:0.0.2.Release
-
+    - name: Deploy to Prod Environment
+      run: docker run -p 5000:5000 acepunk123/hello-world-java-demo:0.0.2.Release
     
       
  
